tests/__fixtures__/fail/en/comments.php
<?php declare(strict_types=1);

return [
    "foo1" => "foo bar", // foo bar
];
